<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Parking app</string>
    <string name="Add_Apartment">Button</string>
    <string name="residentPassword">주민 비밀번호</string>
    <string name="addParkingArea">주차 구역 추가</string>
    <string name="addapt">아파트 추가</string>
    <string name="add">아파트 등록하기</string>
    <string name="view">(주차 가능한 구역명 - 가능 수)를 입력하세요.</string>
    <string name="membership">회원가입</string>
    <string name="register">아파트 등록</string>
    <string name="Login">로그인</string>
    <string name="name">이름:</string>
    <string name="이름">이름:</string>
    <string name="비밀번호">주민/관리자 비밀번호</string>
    <string name="전화번호">전화번호</string>
    <string name="주민">주민</string>
    <string name="관리자">관리자</string>
    <string name="가입하기">가입하기</string>
    <string name="password">주민/관리자 비밀번호</string>
    <string name="number">전화번호</string>
    <string name="login">로그인</string>
    <string name="PK">주차가능 구역보기</string>
    <string name="pk">주차 공간 조회</string>
    <string name="Dpk">이중주차 공간 조회</string>
    <string name="View">주민 주차 상태 보기</string>
    <string name="screen">관리자로 접속된 화면입니다.</string>
    <string name="ResidentScreen">주민으로 접속된 화면입니다.</string>
    <string name="주차공간조회">주차 공간 조회</string>
    <string name="register_cancel">주차 등록/취소</string>
    <string name="reservation_calcel">주차 예약/취소</string>
    <string name="twocheck">이중주차 공간 조회</string>
    <string name="tworegister">이중주차 등록/취소</string>
    <string name="addregion">구역 추가 버튼을 눌러 형식에 맞게 작성하세요.</string>
    <string name="spaceregistration">주차할 공간을 등록해주세요.</string>
    <string name="regionE">구역의 알파벳</string>
    <string name="region">구역</string>
    <string name="Registration">주차 등록</string>
    <string name="back">뒤로가기</string>
    <string name="Number">주차자리번호</string>
    <string name="regionnumber">자리번호</string>
    <string name="cancel">등록취소 바로가기</string>
    <string name="cancelRN">이미 등록한 주차를 취소하려면 버튼을 누르세요.</string>
    <string name="question">주차등록을 취소하시겠습니까?.</string>
    <string name="yes">등록취소</string>
    <string name="back1">뒤로가기</string>
    <string name="tworegistration">이중주차할 공간을 등록해주세요.</string>
    <string name="Alpa">구역의 알파벳</string>
    <string name="twoButton">이미 등록한 이중주차를 취소하려면 버튼틀 누르세요.</string>
    <string name="Region">구역</string>
    <string name="siteNumdouble">자리번호</string>
    <string name="RegionAl">구역의 알파벳</string>
    <string name="DPR">주차등록</string>
    <string name="cancelrightnow">등록취소 바로가기</string>
    <string name="bak">뒤로가기</string>
    <string name="Cancelack">이중주차등록을 취소하시겠습니까?</string>
    <string name="twocancel">등록취소</string>
    <string name="twoback">뒤로가기</string>
    <string name="Infotwo">이중주차 주민정보</string>
    <string name="originaluser">일반주차 주민정보</string>
    <string name="twouser">이중주차 주민정보</string>
    <string name="backtwo">뒤로가기</string>
    <string name="뒤로가기">뒤로가기</string>
    <string name="Backgo">뒤로가기</string>
    <string name="_2">2중 주차 구역 추가</string>
    <string name="addparkingareabutton">주차 구역 추가</string>
    <string name="adminpassword">관리자 비밀번호</string>
    <string name="aptName">아파트 이름</string>
    <string name="residentpassword">주민 비밀번호</string>
    <string name="Back">뒤로가기</string>
    <string name="Backbutton">뒤로가기</string>
    <string name="아파트이름">아파트이름\n</string>
</resources>