<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<TextView
    android:id="@+id/textView7"
    android:layout_width="336dp"
    android:layout_height="43dp"
    android:text="@string/tworegistration"
    android:textSize="24sp"
    tools:ignore="MissingConstraints,TextSizeCheck"
    tools:layout_editor_absoluteX="37dp"
    tools:layout_editor_absoluteY="89dp" />

<TextView
android:id="@+id/textView8"
android:layout_width="70dp"
android:layout_height="31dp"
android:text="@string/Region"
tools:ignore="MissingConstraints"
tools:layout_editor_absoluteX="89dp"
tools:layout_editor_absoluteY="200dp" />

<TextView
android:id="@+id/textView9"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/siteNumdouble"
tools:ignore="MissingConstraints"
tools:layout_editor_absoluteX="81dp"
tools:layout_editor_absoluteY="266dp" />

<EditText
android:id="@+id/editTextText2"
android:layout_width="128dp"
android:layout_height="48dp"
android:autofillHints=""
android:ems="10"
android:hint="@string/RegionAl"
android:inputType="text"
android:minHeight="48dp"
android:textColorHint="#546E7A"
tools:ignore="MissingConstraints"
tools:layout_editor_absoluteX="159dp"
tools:layout_editor_absoluteY="190dp" />

<EditText
android:id="@+id/editTextNumber3"
android:layout_width="126dp"
android:layout_height="48dp"
android:autofillHints=""
android:ems="10"
android:hint="@string/siteNumdouble"
android:inputType="number"
android:minHeight="48dp"
android:textColorHint="#546E7A"
tools:ignore="MissingConstraints,DuplicateSpeakableTextCheck"
tools:layout_editor_absoluteX="167dp"
tools:layout_editor_absoluteY="253dp" />

<Button
android:id="@+id/button11"
android:layout_width="111dp"
android:layout_height="48dp"
android:text="@string/DPR"
tools:ignore="MissingConstraints"
tools:layout_editor_absoluteX="147dp"
tools:layout_editor_absoluteY="341dp" />

<TextView
android:id="@+id/textView10"
android:layout_width="292dp"
android:layout_height="55dp"
android:text="@string/twoButton"
android:textSize="19sp"
tools:ignore="MissingConstraints,TextSizeCheck"
tools:layout_editor_absoluteX="59dp"
tools:layout_editor_absoluteY="447dp" />

<Button
android:id="@+id/button12"
android:layout_width="160dp"
android:layout_height="48dp"
android:text="@string/cancelrightnow"
tools:ignore="MissingConstraints"
tools:layout_editor_absoluteX="125dp"
tools:layout_editor_absoluteY="531dp" />

<Button
android:id="@+id/button13"
android:layout_width="103dp"
android:layout_height="48dp"
android:text="@string/bak"
tools:ignore="MissingConstraints"
tools:layout_editor_absoluteX="56dp"
tools:layout_editor_absoluteY="643dp" />

</androidx.constraintlayout.widget.ConstraintLayout>