<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/ParkingCheck"
        android:layout_width="157dp"
        android:layout_height="48dp"
        android:text="@string/pk"
        android:textSize="16sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="127dp"
        tools:layout_editor_absoluteY="212dp" />

    <Button
        android:id="@+id/DoubleParkingCheck"
        android:layout_width="183dp"
        android:layout_height="49dp"
        android:text="@string/Dpk"
        android:textSize="16sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="419dp" />

    <Button
        android:id="@+id/viewResidentButton"
        android:layout_width="177dp"
        android:layout_height="49dp"
        android:text="@string/originaluser"
        android:textSize="16sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="314dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="261dp"
        android:layout_height="40dp"
        android:text="@string/screen"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="121dp" />

    <Button
        android:id="@+id/button16"
        android:layout_width="181dp"
        android:layout_height="46dp"
        android:text="@string/twouser"
        android:textSize="16sp"
        tools:layout_editor_absoluteX="119dp"
        tools:layout_editor_absoluteY="520dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>