<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="346dp"
        android:layout_height="46dp"
        android:text="@string/Cancelack"
        android:textSize="20sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="167dp" />

    <Button
        android:id="@+id/button14"
        android:layout_width="103dp"
        android:layout_height="45dp"
        android:text="@string/twocancel"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="262dp" />

    <Button
        android:id="@+id/button15"
        android:layout_width="101dp"
        android:layout_height="45dp"
        android:text="@string/twoback"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="152dp"
        tools:layout_editor_absoluteY="355dp" />
</androidx.constraintlayout.widget.ConstraintLayout>