<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="319dp"
        android:layout_height="37dp"
        android:text="@string/question"
        android:textSize="24sp"
        tools:ignore="MissingConstraints,TextSizeCheck"
        tools:layout_editor_absoluteX="46dp"
        tools:layout_editor_absoluteY="217dp" />

    <Button
        android:id="@+id/button8"
        android:layout_width="127dp"
        android:layout_height="48dp"
        android:text="@string/yes"
        android:textSize="16sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="134dp"
        tools:layout_editor_absoluteY="322dp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="124dp"
        android:layout_height="48dp"
        android:text="@string/back1"
        android:textSize="16sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="409dp" />

</androidx.constraintlayout.widget.ConstraintLayout>