<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/Add_Apartment"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_marginBottom="356dp"
        android:text="@string/membership"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck,HardcodedText,MissingConstraints,VisualLintOverlap"
        tools:layout_editor_absoluteX="129dp" />

    <Button
        android:id="@+id/Membership"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:text="@string/register"
        tools:ignore="HardcodedText,MissingConstraints"
        tools:layout_editor_absoluteX="129dp"
        tools:layout_editor_absoluteY="198dp" />

    <Button
        android:id="@+id/Login"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:text="@string/Login"
        tools:ignore="HardcodedText,MissingConstraints"
        tools:layout_editor_absoluteX="129dp"
        tools:layout_editor_absoluteY="439dp" />

</androidx.constraintlayout.widget.ConstraintLayout>